--- a/_posts/2021-09-01-SI582-W1.md
+++ b/_posts/2021-09-01-SI582-W1.md
@@ -15,6 +15,7 @@ In fact, arrogance is the Achilles' Heel in designing, from my perspective. When
 
 # Gaming Experience
 
+I'm keen on games, also on game design, engineering, and theories. When I read about the user experience goals, I found that most of the desirable aspects meet the requirements of a successful game. For example, a good game always creates flow for players, and it continues on provide instant feedbacks to give a sense of control and excitement. Think in a gamification way, interacting with products and interfaces can be interpreted as playing different games, and besides the functional needings, what everyone wants to gain is just fun. It helps me to better understand the basic concepts in user experience design, and also opens up my mind on how to create attracting experience for users.
 
 # Accessibility
 
